# dtls-minimal

./: LICENSE  ReadMe.md
cmake/: CMakeLists.txt
cmake/coap-server/: CMakeLists.txt
cmake/dtls-server/: CMakeLists.txt
cmake/modules/: Findlibcoap-2.cmake
coap-server/: coap-server.cpp  common.cpp
dtls-server/: dtls-server.cpp
tools/: mkselfsigned.sh  selfsigned.pem
